--- a/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
+++ b/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "# Configuration - Update these values with your credentials\n",
-    "ELASTICSEARCH_HOST = \"https://tralmis-tral-d91b08.es.us-central1.gcp.elastic.cloud:443\"\n",
+    "ELASTICSEARCH_URL = \"https://tralmis-tral-d91b08.es.us-central1.gcp.elastic.cloud:443\"\n",
     "ELASTICSEARCH_API_KEY = \"<your_elasticsearch_api_key_here>\"\n",
     "MISTRAL_API_KEY = \"<your_mistral_api_key_here>\"\n",
     "\n",
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "# Initialize Elasticsearch client\n",
-    "es_client = Elasticsearch(hosts=[ELASTICSEARCH_HOST], api_key=ELASTICSEARCH_API_KEY)"
+    "es_client = Elasticsearch(hosts=[ELASTICSEARCH_URL], api_key=ELASTICSEARCH_API_KEY)"
    ]
   },
   {
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "print(\n",
-    "    f\"Creating Mistral inference endpoint: {INFERENCE_ENDPOINT_NAME} at {ELASTICSEARCH_HOST}\"\n",
+    "    f\"Creating Mistral inference endpoint: {INFERENCE_ENDPOINT_NAME} at {ELASTICSEARCH_URL}\"\n",
     ")\n",
     "\n",
     "try:\n",
@@ -227,7 +227,7 @@
     "print(\"Assistant: \\n\")\n",
     "\n",
     "for chunk in stream_chat_completion(\n",
-    "    ELASTICSEARCH_HOST, INFERENCE_ENDPOINT_NAME, messages\n",
+    "    ELASTICSEARCH_URL, INFERENCE_ENDPOINT_NAME, messages\n",
     "):\n",
     "    print(chunk, end=\"\", flush=True)"
    ]
@@ -311,7 +311,7 @@
     "    for game_doc in games_batch:\n",
     "        index_meta = {\"index\": {\"_index\": INDEX_NAME, \"_id\": game_doc[\"id\"]}}\n",
     "        bulk_body += json.dumps(index_meta) + \"\\n\" + json.dumps(game_doc) + \"\\n\"\n",
-    "    bulk_url = f\"{ELASTICSEARCH_HOST}/_bulk\"\n",
+    "    bulk_url = f\"{ELASTICSEARCH_URL}/_bulk\"\n",
     "    bulk_headers = {**ELASTICSEARCH_HEADERS, \"Content-Type\": \"application/x-ndjson\"}\n",
     "    try:\n",
     "        response = requests.post(bulk_url, data=bulk_body, headers=bulk_headers)\n",
@@ -479,7 +479,7 @@
     "\n",
     "    full_response = \"\"\n",
     "    for chunk in stream_chat_completion(\n",
-    "        ELASTICSEARCH_HOST, INFERENCE_ENDPOINT_NAME, messages\n",
+    "        ELASTICSEARCH_URL, INFERENCE_ENDPOINT_NAME, messages\n",
     "    ):\n",
     "        print(chunk, end=\"\", flush=True)\n",
     "        full_response += chunk\n",
