--- a/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
+++ b/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "f284f828",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,8 @@
     "import json\n",
     "from typing import Generator\n",
     "from tqdm import tqdm\n",
-    "from elasticsearch import Elasticsearch"
+    "from elasticsearch import Elasticsearch\n",
+    "import getpass"
    ]
   },
   {
@@ -51,16 +52,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "id": "dd01b30e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Credentials - Enter your API keys securely\n",
+    "ELASTICSEARCH_URL = input(\"Enter your Elasticsearch URL: \").strip()\n",
+    "ELASTICSEARCH_API_KEY = getpass.getpass(\"Enter your Elasticsearch API key: \")\n",
+    "MISTRAL_API_KEY = getpass.getpass(\"Enter your Mistral API key: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "5fdf1b27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Configuration - Update these values with your credentials\n",
-    "ELASTICSEARCH_URL = \"https://tralmis-tral-d91b08.es.us-central1.gcp.elastic.cloud:443\"\n",
-    "ELASTICSEARCH_API_KEY = \"<your_elasticsearch_api_key_here>\"\n",
-    "MISTRAL_API_KEY = \"<your_mistral_api_key_here>\"\n",
-    "\n",
+    "# Configurations, no need to change these values\n",
     "MISTRAL_MODEL = \"mistral-large-latest\"  # Mistral model to use\n",
     "INFERENCE_ENDPOINT_NAME = (\n",
     "    \"mistral-embeddings-chat-completion\"  # Name for the inference endpoint\n",
