--- a/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
+++ b/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "# Credentials - Enter your API keys securely\n",
-    "ELASTICSEARCH_URL = input(\"Enter your Elasticsearch URL: \").strip()\n",
+    "ELASTICSEARCH_URL = getpass.getpass(\"Enter your Elasticsearch URL: \").strip()\n",
     "ELASTICSEARCH_API_KEY = getpass.getpass(\"Enter your Elasticsearch API key: \")\n",
     "MISTRAL_API_KEY = getpass.getpass(\"Enter your Mistral API key: \")"
    ]
