Adding title to make the build pass

--- a/supporting-blog-content/multilingual-embedding/multilingual_embedding.ipynb
+++ b/supporting-blog-content/multilingual-embedding/multilingual_embedding.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lost In Translation? Multilingual Embedding Models Are All You Need*\n",
+    "\n",
+    "This notebook by Quynh Nguyen shows how cross-lingual vector search overcomes language barriers, enabling you to query and retrieve information in any language from both single and multilingual datasets. It accompanies the piece *Lost In Translation? Multilingual Embedding Models Are All You Need* from [Elasticsearch Labs](https://www.elastic.co/search-labs)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -40,7 +49,7 @@
     "    print(f\"Data successfully downloaded and saved to {output_file}\")\n",
     "else:\n",
     "    print(f\"Failed to download data: {response.status_code}\")\n",
-    "    print(response.text)\n"
+    "    print(response.text)"
    ]
   },
   {
@@ -54,7 +63,7 @@
     "# Get credentials securely for localhost Elasticsearch\n",
     "print(\"Enter your Elasticsearch credentials:\")\n",
     "cloud_id = input(\"Enter your cloud_id: \")\n",
-    "api_key = getpass(\"Enter your api_key: \")\n"
+    "api_key = getpass(\"Enter your api_key: \")"
    ]
   },
   {
@@ -82,14 +91,15 @@
    ],
    "source": [
     "from elasticsearch import Elasticsearch\n",
+    "\n",
     "try:\n",
     "    es = Elasticsearch(\n",
     "        hosts=[{\"host\": \"localhost\", \"port\": 9200, \"scheme\": \"https\"}],\n",
     "        basic_auth=(\"elastic\", \"qaf_admin\"),\n",
     "        verify_certs=False,  # Set to True if you have valid SSL certificates\n",
     "        # Alternatively, you can use Elastic cloud_id and api_key\n",
-    "        #api_key=getpass(\"API Key: \")\n",
-    "        #cloud_id=getpass(\"Cloud ID: \"),\n",
+    "        # api_key=getpass(\"API Key: \")\n",
+    "        # cloud_id=getpass(\"Cloud ID: \"),\n",
     "    )\n",
     "\n",
     "    # Test the connection\n",
@@ -101,7 +111,7 @@
     "except Exception as e:\n",
     "    print(f\"Error connecting to Elasticsearch: {e}\")\n",
     "    print(\"Please check your credentials\")\n",
-    "    raise\n"
+    "    raise"
    ]
   },
   {
@@ -147,7 +157,7 @@
     "    es.indices.create(index=index_name, body=mapping)\n",
     "\n",
     "# Load the JSON data\n",
-    "with open('./multilingual_coco_sample.json', 'r') as f:\n",
+    "with open(\"./multilingual_coco_sample.json\", \"r\") as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "rows = data[\"rows\"]\n",
@@ -175,16 +185,16 @@
     "            if description == \"\":\n",
     "                continue\n",
     "            # Add index operation\n",
-    "            bulk_data.append(\n",
-    "                {\"index\": {\"_index\": index_name}}\n",
-    "            )\n",
+    "            bulk_data.append({\"index\": {\"_index\": index_name}})\n",
     "            # Add document\n",
-    "            bulk_data.append({\n",
-    "                \"language\": lang,\n",
-    "                \"description\": description,\n",
-    "                \"en\": first_eng_caption,\n",
-    "                \"image_url\": image_url,\n",
-    "            })\n",
+    "            bulk_data.append(\n",
+    "                {\n",
+    "                    \"language\": lang,\n",
+    "                    \"description\": description,\n",
+    "                    \"en\": first_eng_caption,\n",
+    "                    \"image_url\": image_url,\n",
+    "                }\n",
+    "            )\n",
     "\n",
     "# Perform bulk indexing\n",
     "if bulk_data:\n",
