--- a/supporting-blog-content/multilingual-embedding/multilingual_embedding.ipynb
+++ b/supporting-blog-content/multilingual-embedding/multilingual_embedding.ipynb
@@ -25,7 +25,6 @@
    "source": [
     "import requests\n",
     "import json\n",
-    "import os\n",
     "\n",
     "### Download multilingual coco dataset\n",
     "### Here we are retrieving first 100 rows for this example\n",
@@ -54,21 +53,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your Elasticsearch credentials:\n"
+     ]
+    }
+   ],
    "source": [
     "from getpass import getpass\n",
     "\n",
     "# Get credentials securely for localhost Elasticsearch\n",
     "print(\"Enter your Elasticsearch credentials:\")\n",
-    "cloud_id = input(\"Enter your cloud_id: \")\n",
-    "api_key = getpass(\"Enter your api_key: \")"
+    "elastic_endpoint = input(\"Enter your Elastic endpoint: \")\n",
+    "api_key = getpass(\"Enter your API key: \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,16 +84,6 @@
      "text": [
       "Successfully connected to Elasticsearch\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/elasticsearch/_sync/client/__init__.py:311: SecurityWarning: Connecting to 'https://localhost:9200' using TLS with verify_certs=False is insecure\n",
-      "  _transport = transport_class(\n",
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/urllib3/connectionpool.py:1099: InsecureRequestWarning: Unverified HTTPS request is being made to host 'localhost'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
-      "  warnings.warn(\n"
-     ]
     }
    ],
    "source": [
@@ -94,12 +91,8 @@
     "\n",
     "try:\n",
     "    es = Elasticsearch(\n",
-    "        hosts=[{\"host\": \"localhost\", \"port\": 9200, \"scheme\": \"https\"}],\n",
-    "        basic_auth=(\"elastic\", \"qaf_admin\"),\n",
-    "        verify_certs=False,  # Set to True if you have valid SSL certificates\n",
-    "        # Alternatively, you can use Elastic cloud_id and api_key\n",
-    "        # api_key=getpass(\"API Key: \")\n",
-    "        # cloud_id=getpass(\"Cloud ID: \"),\n",
+    "        hosts=[elastic_endpoint],\n",
+    "        api_key=api_key\n",
     "    )\n",
     "\n",
     "    # Test the connection\n",
@@ -116,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -125,16 +118,6 @@
      "text": [
       "Successfully bulk indexed 4840 documents\n",
       "Indexing complete!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/urllib3/connectionpool.py:1099: InsecureRequestWarning: Unverified HTTPS request is being made to host 'localhost'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
-      "  warnings.warn(\n",
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/urllib3/connectionpool.py:1099: InsecureRequestWarning: Unverified HTTPS request is being made to host 'localhost'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
@@ -227,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
