--- a/supporting-blog-content/multilingual-embedding/multilingual_embedding.ipynb
+++ b/supporting-blog-content/multilingual-embedding/multilingual_embedding.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -90,10 +90,7 @@
     "from elasticsearch import Elasticsearch\n",
     "\n",
     "try:\n",
-    "    es = Elasticsearch(\n",
-    "        hosts=[elastic_endpoint],\n",
-    "        api_key=api_key\n",
-    "    )\n",
+    "    es = Elasticsearch(hosts=[elastic_endpoint], api_key=api_key)\n",
     "\n",
     "    # Test the connection\n",
     "    if not es.ping():\n",
