don't need (now deleted) keys (!)

--- a/notebooks/enterprise-search/app-search-engine-exporter.ipynb
+++ b/notebooks/enterprise-search/app-search-engine-exporter.ipynb
@@ -73,10 +73,10 @@
    "outputs": [],
    "source": [
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
-    "ELASTIC_CLOUD_ID = \"mjh-app-search-exporter-test:dXMtY2VudHJhbDEuZ2NwLmNsb3VkLmVzLmlvOjQ0MyRlNzE4ZTY5ZTgyYzg0MzlkODMwMTRjMWJlYWIxZWZkMiRlZGUwMTE1MDM1ZjQ0ZjMxYTc5ZDU5MTRhZDQ1MWY1MA==\"\n",
+    "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "\n",
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
-    "ELASTIC_API_KEY = \"Z2dpajVKa0I2UW56Zk9xYUtNT086cWNKbmw0ZEFjTnFJbTJIU295MVZHQQ==\"\n",
+    "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
     "\n",
     "elasticsearch = Elasticsearch(\n",
     "    # For local development\n",
@@ -106,8 +106,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "APP_SEARCH_ENDPOINT = \"https://mjh-app-search-exporter-test-b64877.ent.us-central1.gcp.cloud.es.io\"\n",
-    "APP_SEARCH_PRIVATE_KEY = \"private-iubp52vt6sbc7g8vziwzhor2\"\n",
+    "APP_SEARCH_ENDPOINT = getpass(\"App Search endpoint: \")\n",
+    "APP_SEARCH_PRIVATE_KEY = getpass(\"App Search private key: \")\n",
     "\n",
     "app_search = AppSearch(APP_SEARCH_ENDPOINT, bearer_auth=APP_SEARCH_PRIVATE_KEY)\n",
     "\n",
