add timeout and retry for vectorstore

--- a/supporting-blog-content/agentic-rag/agent_rag_news_assistant.ipynb
+++ b/supporting-blog-content/agentic-rag/agent_rag_news_assistant.ipynb
@@ -281,6 +281,7 @@
     "    docs,\n",
     "    es_url=ES_ENDPOINT,\n",
     "    es_api_key=ES_API_KEY,\n",
+    "    es_params={\"request_timeout\": 60, \"max_retries\": 3, \"retry_on_timeout\": True},\n",
     "    index_name=index_name,\n",
     "    strategy=SparseVectorStrategy(model_id=\".elser_model_2\"),\n",
     ")\n",
